@@ -128,6 +128,7 @@ test "x$RPM_BUILD_ROOT" != "x" && rm -rf $RPM_BUILD_ROOT
 %config(noreplace) /etc/cobbler/rsync.exclude
 %config(noreplace) /etc/logrotate.d/cobblerd_rotate
 %config(noreplace) /etc/cobbler/modules.conf
+%config(noreplace) /etc/cobbler/users.conf
 %dir %{python_sitelib}/cobbler
 %dir %{python_sitelib}/cobbler/yaml
 %dir %{python_sitelib}/cobbler/modules
@@ -190,14 +191,14 @@ test "x$RPM_BUILD_ROOT" != "x" && rm -rf $RPM_BUILD_ROOT
 
 %changelog
 
-<<<<<<< HEAD:cobbler.spec
-* Fri Mar 07 2008 Michael DeHaan <mdehaan@redhat.com> - 0.9.0-1
-=======
+* Wed Mar 26 2008 Michael DeHaan <mdehaan@redhat.com> - 0.9.0-1
+- Upstream changes (see CHANGELOG)
+- packaged /etc/cobbler/users.conf
+
 * Mon Mar 10 2008 Michael DeHaan <mdehaan@redhat.com> - 0.8.3-1
 - Upstream changes (see CHANGELOG)
 
 * Fri Mar 07 2008 Michael DeHaan <mdehaan@redhat.com> - 0.8.2-1
->>>>>>> master:cobbler.spec
 - Upstream changes (see CHANGELOG)
 
 * Wed Feb 20 2008 Michael DeHaan <mdehaan@redhat.com> - 0.8.1-1
