@@ -11,12 +11,20 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 """
 
-from server.xmlrpcclient import ServerProxy
+from xmlrpclib import ServerProxy
+import optparse
 
 if __name__ == "__main__":
-    sp = ServerProxy("httpu:///var/lib/cobbler/sock")
-    print sp.login("<system>","")
-
+    p = optparse.OptionParser()
+    p.add_option("-u","--user",dest="user",default="test")
+    p.add_option("-p","--pass",dest="password",default="test")
+    sp = ServerProxy("http://127.0.0.1/cobbler_api_rw")
+    (options, args) = p.parse_args()
+    print "- trying to login with user=%s" % options.user
+    token = sp.login(options.user,options.password)
+    print "- token: %s" % token
+    check = sp.check_access(token,"imaginary_method_name")
+    print "- access ok? %s" % check
 
 
 
