@@ -9,4 +9,4 @@ repo = serializer_yaml
 module = authn_configfile
 
 [authorization]
-module = authn_allowall
+module = authz_allowall
