@@ -8,6 +8,7 @@ Cobbler CHANGELOG
 - added patch to allow --kopts/--ksmeta items to be cleared with --kopts=delete
 - tftpboot location is now inferred from xinetd config (added for F9 compat)
 - added authn_ldap and stub for authz_configfile
+- authz_configfile allows filtering ldap/other users by config file
 
 - ??? - 0.8.3
 - fix WebUI documentation URL
